# gitoxide

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  pyproject.toml
.github/: dependabot.yml  release-drafter-config.yml
.github/workflows/: CI.yml  publish.yml  release-drafter.yml
python/gitoxide/: __init__.py  _gitoxide.pyi
src/: lib.rs
tests/: conftest.py  test_repository.py
